--- a/config/config.json
+++ b/config/config.json
@@ -15,10 +15,11 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "port": 3306,
+    "username": "qb7b7ja8nr7cuori",
+    "password": "zzbjd5xqzuk3besr",
+    "database": "w2jaaccvxnhvfjch",
+    "host": "g3v9lgqa8h5nq05o.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
